# graphing-calculator-engine

./: .gitignore  CMakeLists.txt  README.md  main.c  outputs.c  outputs.h  plotters.c  plotters.h  pointGenerators.c  pointGenerators.h  ppmOutput.c  ppmOutput.h  vars.c  vars.h
